27/04/2020
Added a disease mortality csv
Disease parameters can now be read in from a csv file (stored in the parameters singleton)
Added a csv reader
26/04/2020
By default parameters used in a run are output to a file called RunParameters
Parameters in this file now grouped using categories in the parameterFile
Added a line to main so as to output model local starting time and date
Added naming scheme for experiments and directories: directories for output from every run now auto-created if needed
24/04/2020
Redesigned the disease class. Multiple simultaneous infectious diseases now possible
Diseases have a few stages each exponentially distributed.
23/04/2020
Added asciiGird to searcGrid with arbitrary x/y ranges and co-ordinates.
Created aggregators limited by a set of upper and lower x/y co-ordinates
Created cell aggregators to a fixed regular x-y size in searchGrid
Added the ability to set missing in searchGrid asciiGridFileWriter, but with default set to -9999
Added functions to retrieve searchgrid x/y size and origin
Renamed asciigrid in population builder to clarify where from
Made index of missing cells private in asciiGrid
Bugfix in population builder (not returning a value on probabilistic estimate when pop in a cell<1)
22/04/2020
Added an outputs class to abstract writing results to files.
Gridded files supported by passing a function to the searchGrid so that it can sum over agents
Searchgrid has a function to return an asciiGridFileWriter matched to its co-ordinates
Parameter file updated to include filenames for output to gridded spatial maps
asciiGridFileWriter able to take time series of (regular) grids in ARC format (but with only a single header)
